# ict9-interactor-backend

./: .env.sample  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  db.py  main.py  security.py  utils.py
app/api/: campaigns.py  deps.py  discount_codes.py  host_users.py  hosts.py  users.py  widget_templates.py  widgets.py
app/crud/: __init__.py  base.py  crud_campaign.py  crud_discount_code.py  crud_host.py  crud_host_user.py  crud_user.py  crud_widget.py  crud_widget_template.py
app/models/: base.py  campaign.py  discount_code.py  host.py  host_user.py  user.py  widget.py  widget_template.py
app/schemas/: campaign.py  discount_code.py  host.py  host_user.py  user.py  widget.py  widget_template.py
app/services/: widget_service.py
docs/: README.md  api.md  config.md  ict-challenge-en.md  ict-challenge-fa.md  models.md  services.md
tests/: test_users.py
