[tool.poetry]
name = "Interactor"
version = "0.1.0"
description = "An ecommerce application"
authors = ["Shahriar Shariati <shahriarshm81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"
cryptography = "^43.0.1"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"
bs4 = "^0.0.2"
openai = "^1.46.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"